message header added

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <video autoplay="true" id="video_element"></video>
     <video autoplay="true" id="video_element_another"></video>
     </div>
+    <div id="message_header"></div>
     <div id="message_container"></div>
 
     <div class="btns">
