--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>web cam</title>
     <link rel="stylesheet" href="sheet.css">
@@ -30,8 +30,9 @@
         </button>
         <button id="on_vlick" class="a_v">JOIN CALL</button>
         <button id="share_screen" class="a_v">START SCREEN SHARING</button>
-        
-        <textarea name="message" id="message"></textarea>
+        <!-- <button id="record">RECORD</button>
+        <button id="stop_record">Stop Record</button> -->
+        <textarea name="message" id="message" placeholder="SEND MESSAGE"></textarea>
         <button id="send_button">
             <span class="glyphicon" style="font-size: 30px; color: white;">&#xe171;</span>
         </button>
