recording functionality added

--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,17 @@
     <div id="message_container"></div>
 
     <div class="btns">
-        <button onclick="video_button()" class="a_v" id="v_btn">
+        <button onclick="video_button()"  id="v_btn">
             <i class='fas fa-video' style="font-size:30px;" id="s_vedio"></i>
         </button>
-        <button onclick="audio_button()" class="a_v" id="a_btn">
+        <button onclick="audio_button()"  id="a_btn">
                 <i class='fas fa-microphone' style="font-size: 30px;"></i>
                 <!-- <i class='fas fa-microphone-slash' style='font-size:30px'></i> -->
         </button>
-        <button id="on_vlick" class="a_v">JOIN CALL</button>
-        <button id="share_screen" class="a_v">START SCREEN SHARING</button>
-        <!-- <button id="record">RECORD</button>
-        <button id="stop_record">Stop Record</button> -->
+        <button id="on_vlick" >JOIN CALL</button>
+        <button id="share_screen" >START SCREEN SHARING</button>
+        <button id="record">RECORD</button>
+        <button id="stop_record">Stop</button>
         <textarea name="message" id="message" placeholder="SEND MESSAGE"></textarea>
         <button id="send_button">
             <span class="glyphicon" style="font-size: 30px; color: white;">&#xe171;</span>
