audio bug resolved

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <div id="container">
     <video autoplay="true" id="video_element"></video>
     <video autoplay="true" id="video_element_another"></video>
+    <button id="remoteaudio">mute remote audio</button>
     </div>
     <div id="message_header"></div>
     <div id="message_container"></div>
