--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <video autoplay="true" id="video_element"></video>
     <video autoplay="true" id="video_element_another"></video>
 </div>
-<div id="message_header"></div>
+<!-- <div id="message_header"></div> -->
 <div id="message_container"></div>
 
 <div class="btns">
@@ -56,6 +56,8 @@
         <i class="fa fa-volume-up" aria-hidden="true" id="remote_audio_on" style="font-size: xx-large;"></i>
         <i class="fa fa-volume-down" aria-hidden="true" id="remote_audio_off" style="font-size: xx-large;"></i>
     </button>
+
+    <button id="clear_chats" class="btns_btn">clear chats</button>
     </div>
 
     <!-- INPUT TAG FOR WRITING MESSAGE  -->
