--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,9 @@
         <i class="fa fa-volume-down" aria-hidden="true" id="remote_audio_off" style="font-size: xx-large;"></i>
     </button>
 
-    <button id="clear_chats" class="btns_btn">clear chats</button>
+    <button id="clear_chats" class="btns_btn">
+        <i class="fas fa-eraser" style="font-size: xx-large;"></i>
+    </button>
     </div>
 
     <!-- INPUT TAG FOR WRITING MESSAGE  -->
